--- a/src/mailer/template/mail.template.hbs
+++ b/src/mailer/template/mail.template.hbs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <p>Ejemplo sirve</p>
-    <p>este es el url: {{url}}</p>
+    <p>Verificación de email</p>
+    <p>Mantiene tu cuenta de Nexa segura mediante la verificación de tu dirección de correo</p>
+    <p>Confirma tu cuenta mediante el siguiente URL: {{url}}</p>
 </body>
 </html>
